# run-allen-run

./: .gitignore  README.md  allen_benchmarks.py  build.sh  compare.py  config.toml  fix-corrupt-metrics.py  genconf.py  lhcb-setup.sh  prepare.sh  pyproject.toml  requirements.txt  scanprops.py  selections.py  submit-job.sh  test_compare.py  test_scanprops.py
.github/workflows/: python-ci.yml
data/: ghostbuster.csv  handcoded.csv
notes/: comparison.md
