[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4" ]
build-backend = "setuptools.build_meta"

[project]
name = "run-allen-run"
version = "0.1"
description = "Benchmarking workflow for Allen"
readme = "README.md"
urls = {"repository" = "https://github.com/suvayu/run-allen-run"}
keywords = ["benchmarking", "workflow"]
license = {"text" = "Apache License Version 2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.mypy_cache
  | \.pytest_cache
  | \.vscode
  | _build
  | build
  | dist
  | .*\.egg-info

  # directories without python source files
  | tests
  | testing
  | tmp
)/
'''

[tool.pyright]
venvPath = "venv"
venv = "run-allen"
